# WebServer_on_c-

src/: CMakeLists.txt
src/app/: main.cpp
src/communications/: comunications.hpp
src/server/: server.hpp  server.hpp.autosave
